Refs #107236; Added feedbacks field in Reportek API and updated documentation
