# Products/Reportek/docs/api/swagger_api.yaml
@@ -218,6 +218,7 @@ paths:
             type: string
             enum:
               - files
+              - feedbacks
               - url
               - title
               - description
@@ -276,6 +277,24 @@ paths:
                       fileSize: 3679181
                       fileSizeHR: 3.51 MB
                       isRestricted: 0
+                - feedbacks:
+                    - title: 'AutomaticQA result for: XML File validation'
+                      url: 'http://foo/bar/my_envelope/AutomaticQA_406509'
+                      contentType: text/html
+                      documentId: "my_envelope_file.xml"
+                      activityId: AutomaticQA
+                      postingDate: 2013-04-12T23:20:50.520Z
+                      feedbackStatus: INFO
+                      feedbackMessage: XML File validations passed without errors.
+                      automatic: 1
+                    - title: 'Final Feedback'
+                      url: 'http://foo/bar/my_envelope/feedback_1527576363'
+                      contentType: text/plain
+                      documentId: null
+                      activityId: ''
+                      postingDate: 2013-04-13T23:20:50.520Z
+                      feedbackStatus: ''
+                      feedbackMessage: ''
                   periodEndYear: 2014
                   status: Release
                   countryCode: RO
@@ -326,7 +345,7 @@ definitions:
         description: The envelope's country code (ISO Alpha-2).
       reportingDate:
         type: string
-        description: The envelope's reporting date.
+        description: The envelope's reporting date. Please note that the reporting date is the creation date when the envelope is not released
         format: dateTime
       reportingDateStart:
         type: string
@@ -340,7 +359,7 @@ definitions:
         description: The envelope's URL.
       modifiedDate:
         type: string
-        description: The envelope's modification date.
+        description: The envelope's modification date. Please note that there are many potential events/actions that can alter the modificationDate of an envelope
         format: dateTime
       periodDescription:
         $ref: '#/definitions/PeriodDescription'
@@ -405,7 +424,7 @@ definitions:
     properties:
       contentType:
         type: string
-        description: The file's content type.
+        description: The file's content type. The file's content type is determined by file extension, request headers and then falling back to Zope's content type guessing algorithm
       title:
         type: string
         description: The file's title.
@@ -436,6 +455,40 @@ definitions:
         enum:
           - 0
           - 1
+  Feedback:
+    type: object
+    properties:
+      contentType:
+        type: string
+        description: The feedback's content type.
+      title:
+        type: string
+        description: The feedback's title.
+      url:
+        type: string
+        description: The feedback's URL.
+      postingDate:
+        type: string
+        description: The feedback's posting date.
+        format: dateTime
+      documentId:
+        type: string
+        description: The file to which the feedback refers to.
+      activityId:
+        type: string
+        description: The activity which generated the automatic feedback
+      automatic:
+        type: integer
+        description: Feedback type.
+        enum:
+          - 0
+          - 1
+      feedbackStatus:
+        type: string
+        description: The feedback status.
+      feedbackMessage:
+        type: string
+        description: The feedback message
   History:
     type: object
     properties:
